Переделано чтение файлов